# ScaLIM

./: CMakeLists.txt  README.md
data/GRQC/: attr.txt  candidate_edges_10000_OUTDEG_50WC.txt  candidate_edges_10000_OUTDEG_50WC.txt.vec  candidate_edges_10000_RAND_50WC.txt  candidate_edges_10000_RAND_50WC.txt.vec  edgelist_ic.txt  seeds_IM_50WC.txt  seeds_OUTDEG_50WC.txt  seeds_RAND_50WC.txt  vec.graph
data/GRQC/params/100_0_0.100000_0.001000_2024_OUTDEGseed_WC/: log_Greedy2.txt  log_ScaLIM.txt  log_ScaLIM_minus.txt  selected_edges_Greedy2.txt  selected_edges_ScaLIM.txt  selected_edges_ScaLIM_minus.txt
data/GRQC/params/100_0_0.100000_0.001000_2024_RANDseed_WC/: log_Greedy2.txt  log_ScaLIM.txt  log_ScaLIM_minus.txt  selected_edges_Greedy2.txt  selected_edges_ScaLIM.txt  selected_edges_ScaLIM_minus.txt
exec_files/: ScaLIM.cpp  evaluate.cpp  format_graph.cpp
include/: CommonFuncs.h  Experiments.h  GraphBase.h  IOcontroller.h  InfGraph.h  ResultInfo.h  Timer.h  headers.h  serialize.h
scripts/: GRQC.sh  build.sh
